@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.montoni</groupId>
@@ -15,7 +16,7 @@
 
     <licenses>
         <license>
-            <name>AGPL v3</name>
+            <name>GNU Affero General Public License - v 3.0</name>
             <url>https://www.gnu.org/licenses/agpl-3.0.html</url>
         </license>
     </licenses>
@@ -48,6 +49,9 @@
         <junit.version>5.10.0</junit.version>
 
         <maven.version>3.9.4</maven.version>
+
+        <lineLength>160</lineLength>
+        <indentSize>4</indentSize>
     </properties>
 
     <distributionManagement>
@@ -73,7 +77,7 @@
             <scope>test</scope>
         </dependency>
 
-       <dependency>
+        <dependency>
             <groupId>org.jboss.logmanager</groupId>
             <artifactId>jboss-logmanager</artifactId>
             <version>3.0.1.Final</version>
@@ -83,6 +87,7 @@
 
     <modules>
         <module>library</module>
+        <module>model</module>
     </modules>
 
     <build>
@@ -92,15 +97,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.11.0</version>
-                    <configuration>
-                        <annotationProcessorPaths>
-                            <path>
-                                <groupId>org.projectlombok</groupId>
-                                <artifactId>lombok</artifactId>
-                                <version>${lombok.version}</version>
-                            </path>
-                        </annotationProcessorPaths>
-                    </configuration>
                 </plugin>
 
                 <plugin>
@@ -296,7 +292,6 @@
                         <threadCount>1</threadCount>
                         <parallel>none</parallel>
                         <runOrder>alphabetical</runOrder>
-                        <argLine>--enable-preview</argLine>
                         <systemPropertyVariables>
                             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                         </systemPropertyVariables>
@@ -347,6 +342,25 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <addMavenDescriptor/>
+                        <compress/>
+                        <pomPropertiesFile/>
+                        <manifestFile/>
+                        <manifest>
+                            <addDefaultEntries/>
+                        </manifest>
+                        <manifestEntries>
+                            <Automatic-Module-Name>${project.groupId}.${project.name}</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-wrapper-plugin</artifactId>
                 <configuration>
                     <mavenVersion>${maven.version}</mavenVersion>
@@ -391,18 +405,12 @@
                 <configuration>
                     <releaseProfiles>release</releaseProfiles>
                     <preparationProfiles>release</preparationProfiles>
-                    <indentSize>4</indentSize>
-                    <lineLength>160</lineLength>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
-                <configuration>
-                    <indentSize>4</indentSize>
-                    <lineLength>160</lineLength>
-                </configuration>
             </plugin>
         </plugins>
     </build>
